removed additional content

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Nyan Cat - HTML5+CSS3+JS</title>
+	<title>Nyan CaT Fans only</title>
 
 	<link rel="icon" href="favicon.ico" />
 	<link rel="stylesheet" href="css/nyan.css"/>
@@ -34,16 +34,6 @@
 			<div id="face"></div>
 		</div>
 	</div>
-
-	<a href="https://github.com/cristurm/nyan-cat" title="Nyan Cat's home at GitHub" class="repo">
-		<i class="octicon octicon-mark-github"></i>
-		<span>My Github Repo</span>
-	</a>
-
-	<audio autoplay="true" loop="true">
-		<source src="audio/nyan-cat.ogg" type="audio/ogg" />
-		<source src="audio/nyan-cat.mp3" type="audio/mpeg" />
-	</audio>
 
 	<script src="js/nyan.js"></script>
 </body>
