--- a/nyan6633ff.html
+++ b/nyan6633ff.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
@@ -6,8 +7,13 @@
 
 	<link rel="icon" href="favicon.ico" />
 	<link rel="stylesheet" href="css/nyan.css"/>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Nabla&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="background:#6633ff;">
+
+
 	<div class="sparks-combo">
 		<div class="spark"></div>
 		<div class="spark"></div>
