--- a/nyanviolet.html
+++ b/nyanviolet.html
@@ -11,7 +11,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Nabla&display=swap" rel="stylesheet">
 </head>
-<body style="background:#6633ff;">
+<body style="background:violet;">
 
 
 	<div class="sparks-combo">
