--- a/nyanorange.html
+++ b/nyanorange.html
@@ -9,9 +9,9 @@
 	<link rel="stylesheet" href="css/nyan.css"/>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Nabla&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Nabla&family=Rubik+Iso&display=swap" rel="stylesheet">
 </head>
-<body style="background:#000000;">
+<body style="background:orange;">
 
 
 	<div class="sparks-combo">
@@ -39,6 +39,10 @@
 		<div id="head">
 			<div id="face"></div>
 		</div>
+	</div>
+
+	<div id="flag">
+		CSeC{ny4n_15_4w5m}
 	</div>
 
 	<script src="js/nyan.js"></script>
