--- a/nyanred.html
+++ b/nyanred.html
@@ -11,7 +11,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Nabla&display=swap" rel="stylesheet">
 </head>
-<body style="background:#0000ff;">
+<body style="background:red;">
 
 
 	<div class="sparks-combo">
