--- a/indigo.html
+++ b/indigo.html
@@ -9,9 +9,9 @@
 	<link rel="stylesheet" href="css/nyan.css"/>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Nabla&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Bungee+Spice&family=Rubik+Iso&display=swap" rel="stylesheet">
 </head>
-<body style="background:indigo;">
+<body style="background:#1f0954;">
 
 
 	<div class="sparks-combo">
@@ -39,10 +39,6 @@
 		<div id="head">
 			<div id="face"></div>
 		</div>
-	</div>
-
-	<div id="flag">
-		CSeC{ny4n_15_4w5m}
 	</div>
 
 	<script src="js/nyan.js"></script>
