--- a/cyan.html
+++ b/cyan.html
@@ -9,9 +9,9 @@
 	<link rel="stylesheet" href="css/nyan.css"/>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Nabla&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Bungee+Spice&family=Rubik+Iso&display=swap" rel="stylesheet">
 </head>
-<body style="background:cyan;">
+<body style="background:#a9e7f6;">
 
 
 	<div class="sparks-combo">
