--- a/black.html
+++ b/black.html
@@ -41,6 +41,10 @@
 		</div>
 	</div>
 
+	<div id="flag">
+		P.S. We don't like black cats.
+	</div>
+
 	<script src="js/nyan.js"></script>
 </body>
 </html>
