--- a/black.html
+++ b/black.html
@@ -42,7 +42,7 @@
 	</div>
 
 	<div id="flag">
-		P.S. We don't like black cats.
+		P.S. <span style="text-shadow: 2px 2px 5px red;">Black</span> cats are unluckly.
 	</div>
 
 	<script src="js/nyan.js"></script>
