--- a/blackcat.html
+++ b/blackcat.html
@@ -3,7 +3,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Nyan CaT Fans only</title>
+	<title>Nyan CaT Fans</title>
 
 	<link rel="icon" href="favicon.ico" />
 	<link rel="stylesheet" href="css/nyan.css"/>
@@ -11,7 +11,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Bungee+Spice&family=Rubik+Iso&display=swap" rel="stylesheet">
 </head>
-<body style="background:#a9e7f6;">
+<body style="background:#000000;">
 
 
 	<div class="sparks-combo">
@@ -39,6 +39,10 @@
 		<div id="head">
 			<div id="face"></div>
 		</div>
+	</div>
+
+	<div id="flag">
+		P.S. <span style="text-shadow: 2px 2px 5px red;">Black</span> cats are unlucky.
 	</div>
 
 	<script src="js/nyan.js"></script>
