--- a/greencat.html
+++ b/greencat.html
@@ -3,7 +3,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Nyan CaT Fans only</title>
+	<title>Nyan CaT Fans</title>
 
 	<link rel="icon" href="favicon.ico" />
 	<link rel="stylesheet" href="css/nyan.css"/>
