--- a/indigocat.html
+++ b/indigocat.html
@@ -3,7 +3,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Nyan CaT Fans only</title>
+	<title>Nyan CaT Fans</title>
 
 	<link rel="icon" href="favicon.ico" />
 	<link rel="stylesheet" href="css/nyan.css"/>
@@ -11,7 +11,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Bungee+Spice&family=Rubik+Iso&display=swap" rel="stylesheet">
 </head>
-<body style="background:#da365e;">
+<body style="background:#1f0954;">
 
 
 	<div class="sparks-combo">
@@ -40,6 +40,10 @@
 			<div id="face"></div>
 		</div>
 	</div>
+
+	<div id="flag">CSeC{ny4n_15_4w5m}</div>
+
+	<!-- <audio id="my_audio" src="audio/nyan.mp3" loop="loop"></audio> -->
 
 	<script src="js/nyan.js"></script>
 </body>
