--- a/browncat.html
+++ b/browncat.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html>
-   <head>
-      <title>Redirect</title>
-      <meta http-equiv = "refresh" content = "0; url = https://supersat001.github.io/blackcat.html" />
-   </head>
-   <body bgcolor="#000000">
-   </body>
-</html>
 
-<!-- 
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
@@ -21,7 +11,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Bungee+Spice&family=Rubik+Iso&display=swap" rel="stylesheet">
 </head>
-<body style="background:#000000;">
+<body style="background:#794c35;">
 
 
 	<div class="sparks-combo">
@@ -51,10 +41,6 @@
 		</div>
 	</div>
 
-	<div id="flag">
-		P.S. <span style="text-shadow: 2px 2px 5px red;">Black</span> cats are unlucky.
-	</div>
-
 	<script src="js/nyan.js"></script>
 </body>
-</html> -->
+</html>
