--- a/rebeccapurplecat.html
+++ b/rebeccapurplecat.html
@@ -11,7 +11,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Bungee+Spice&family=Rubik+Iso&display=swap" rel="stylesheet">
 </head>
-<body style="background:#ff60a8;">
+<body style="background:#663399;">
 
 
 	<div class="sparks-combo">
@@ -40,6 +40,8 @@
 			<div id="face"></div>
 		</div>
 	</div>
+
+	<div id="flag">CSeC{ny4n_15_3v3n_m073_4w5m}</div>
 
 	<script src="js/nyan.js"></script>
 </body>
