--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Redirect</title>
-      <meta http-equiv = "refresh" content = "0; url = https://supersat001.github.io/blackcat.html" />
+      <meta http-equiv = "refresh" content = "0; url = https://supersat001.github.io/csec-nyan-cat/blackcat.html" />
    </head>
    <body bgcolor="#000000">
    </body>
