--- a/indigocat.html
+++ b/indigocat.html
@@ -43,7 +43,7 @@
 
 	<div id="flag">CSeC{ny4n_15_4w5m}</div>
 
-	<!-- <audio id="my_audio" src="audio/nyan.mp3" loop="loop"></audio> -->
+	<audio id="my_audio" src="audio/nyan.mp3" loop="loop"></audio>
 
 	<script src="js/nyan.js"></script>
 </body>
